--- a/index.html
+++ b/index.html
@@ -31,7 +31,19 @@
             </div>
         </div>
         <div class = "section2">
-
+            <div id="employment">
+                <h1>Employment</h1>
+                <h3>Retail Associate  2016-2023</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque adipisci vitae id enim cum, illum architecto aut iusto temporibus pariatur, omnis debitis! Porro fugiat aliquid ullam ea veniam accusantium debitis.</p>
+            </div>
+            <div id="education">
+                <h1>Education</h1>
+                <h3>James Madison University 2020-2024</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam nobis rerum a aliquam excepturi delectus harum quidem? Error ex hic, laborum, fugiat, cupiditate repudiandae fuga aut sed odit sunt dolore!</p>
+                <h3>Per Scholas 2024-2024</h3>
+                <h4>Software Engineer</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, quod. Eum dolorem atque cupiditate incidunt aperiam, quibusdam natus quis tenetur et sapiente quas vel voluptas architecto ipsum ipsa saepe. At?</p>
+            </div>
         </div>
         <div class = "section3">
 
