Added Section 3 and formatted it

--- a/index.html
+++ b/index.html
@@ -36,17 +36,32 @@
                 <h3>Retail Associate  2016-2023</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque adipisci vitae id enim cum, illum architecto aut iusto temporibus pariatur, omnis debitis! Porro fugiat aliquid ullam ea veniam accusantium debitis.</p>
             </div>
+            <hr>
             <div id="education">
                 <h1>Education</h1>
                 <h3>James Madison University 2020-2024</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam nobis rerum a aliquam excepturi delectus harum quidem? Error ex hic, laborum, fugiat, cupiditate repudiandae fuga aut sed odit sunt dolore!</p>
+                <hr>
                 <h3>Per Scholas 2024-2024</h3>
                 <h4>Software Engineer</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, quod. Eum dolorem atque cupiditate incidunt aperiam, quibusdam natus quis tenetur et sapiente quas vel voluptas architecto ipsum ipsa saepe. At?</p>
             </div>
         </div>
         <div class = "section3">
-
+            <div id = "programming">
+                <h3>Progamming Skills</h3>
+                <ul>
+                    <li>MySQL</li>
+                    <li>CSS</li>
+                    <li>HTML</li>
+                </ul>
+            </div>
+            <div id = "language">
+                <h3>Language Skills</h3>
+                <ul>
+                    <li>English</li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
