--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <img src="image\Picture1.jpg" alt="Photo of Anthony" height="100vh"></img>
                 </div>
                 <h1>Anthony Walters</h1>
-                <h2>Software Enginner</h2>
+                <h2 id="title">Software Enginner</h2>
             </div>
             <aside>
             <div id="box2" class="boxes">
